--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
   <h1>Hello, world!</h1>
   <p>This is my first GitHub Pages site.</p>
+
+<section><p>I am me.</p></section>
 </body>
 </html>
